--- a/Dead By Daylight Mod Installer/Dead By Daylight Mod Installer.csproj
+++ b/Dead By Daylight Mod Installer/Dead By Daylight Mod Installer.csproj
@@ -36,8 +36,8 @@
     <ApplicationIcon>DBM-Logo.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Newtonsoft.Json">
-      <HintPath>..\..\Libraries\Newtonsoft.Json.dll</HintPath>
+    <Reference Include="Newtonsoft.Json, Version=13.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.13.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -52,17 +52,40 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="Enums\PickResult.cs" />
+    <Compile Include="Model\ISettingsRepository.cs" />
+    <Compile Include="Model\ModPackage.cs" />
+    <Compile Include="Model\Settings.cs" />
+    <Compile Include="Model\SettingsRepository.cs" />
+    <Compile Include="Presenter\CreatorPresenter.cs" />
+    <Compile Include="Presenter\InstallerPresenter.cs" />
+    <Compile Include="Services\Interfaces\IPatcherService.cs" />
+    <Compile Include="Services\PatcherService.cs" />
+    <Compile Include="Services\PickerService.cs" />
+    <Compile Include="Services\Interfaces\IPickerService.cs" />
+    <Compile Include="Services\Interfaces\IMessageBoxService.cs" />
+    <Compile Include="Services\MessageBoxService.cs" />
+    <Compile Include="View\ICreatorView.cs" />
+    <Compile Include="View\IInstallerView.cs" />
+    <Compile Include="View\CreatorForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="View\CreatorForm.Designer.cs">
+      <DependentUpon>CreatorForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Globals.cs" />
+    <Compile Include="View\InstallerForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\InstallerForm.Designer.cs">
+      <DependentUpon>InstallerForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="View\CreatorForm.resx">
+      <DependentUpon>CreatorForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\InstallerForm.resx">
+      <DependentUpon>InstallerForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -72,7 +95,9 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -87,7 +112,15 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="background.png" />
+    <None Include="background_creator.png" />
     <Content Include="DBM-Logo.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\BinaryPatcher\BinaryPatcher\BinaryPatcher.csproj">
+      <Project>{0411c4d1-caec-4ce5-933d-fad1967ec13c}</Project>
+      <Name>BinaryPatcher</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
