--- a/DeadByDaylightModInstaller/DeadByDaylightModInstaller.csproj
+++ b/DeadByDaylightModInstaller/DeadByDaylightModInstaller.csproj
@@ -39,6 +39,9 @@
     <Reference Include="Newtonsoft.Json, Version=13.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.13.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
+    <Reference Include="ObjectListView, Version=2.9.1.1072, Culture=neutral, PublicKeyToken=b1c5bf581481bcd4, processorArchitecture=MSIL">
+      <HintPath>..\packages\ObjectListView.Official.2.9.1\lib\net20\ObjectListView.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -54,6 +57,7 @@
   <ItemGroup>
     <Compile Include="Enums\PickResult.cs" />
     <Compile Include="Model\ISettingsRepository.cs" />
+    <Compile Include="Model\ModListItem.cs" />
     <Compile Include="Model\ModPackage.cs" />
     <Compile Include="Model\Settings.cs" />
     <Compile Include="Model\SettingsRepository.cs" />
