--- a/DeadByDaylightModInstaller/packages.config
+++ b/DeadByDaylightModInstaller/packages.config
@@ -3,4 +3,5 @@
   <package id="CircularProgressBar" version="2.8.0.16" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net472" />
   <package id="WinFormAnimation" version="1.6.0.4" targetFramework="net472" />
+  <package id="ObjectListView.Official" version="2.9.1" targetFramework="net472" />
 </packages>
